# nanbanqiuwannianli

./: .gitignore  README.md  README_es.md  README_zh.md  analyze_broken.py  fix_all.py  fix_all_chars.py  fix_broken_strings.py  fix_calendar_repo.py  fix_comprehensive.py  fix_homescreen.py  fix_homescreen2.py  fix_homescreen3.py  fix_models.py  fix_models2.py  fix_quotes.py  fix_strings.py  fix_zeri.py  fix_zeri2.py  fix_zeri_all.py  generate_solar_terms.py  generate_solar_terms_simple.py  index.html  recover_encoding.py  recover_encoding2.py  restore_zeri.py  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: solar_terms.json
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
south_build/: .gitignore  gradlew.bat  settings.gradle.kts  源代码_前30页.txt  源代码_后30页.txt  用户操作手册.docx  用户操作手册.md
south_build/app/: build.gradle.kts  proguard-rules.pro
south_build/app/src/main/: AndroidManifest.xml
south_build/app/src/main/cpp/: CMakeLists.txt  sxtwl_bridge.c
south_build/app/src/main/res/values-en/: strings.xml
south_build/app/src/main/res/values-es-rAR/: strings.xml
south_build/app/src/main/res/values-zh-rTW/: strings.xml
south_build/gradle/wrapper/: gradle-wrapper.properties
web-demo/: Calendario_Hemisferio_Sur_Libro_Blanco_ES.docx  Southern_Hemisphere_Calendar_White_Paper_EN.docx  baidu_baike.md  whitepaper_en.md  whitepaper_es.md  whitepaper_zh.md  南半球历法白皮书_中文.docx
(+106 files in other folders)
